log
Thu Mar 26 07:13:10 PM UTC 2026: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:9: error: ‘list’ is a pointer; did you mean to use ‘->’?
   46 |     list.head =NULL;
      |         ^
      |         ->
list.c:47:9: error: ‘list’ is a pointer; did you mean to use ‘->’?
   47 |     list.current = 0;
      |         ^
      |         ->
list.c:48:9: error: ‘list’ is a pointer; did you mean to use ‘->’?
   48 |     list.size = 0;
      |         ^
      |         ->
02e3007
Thu Mar 26 07:13:47 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   48 |     list->size = 0;
      |         ^~
ab8d924
Thu Mar 26 07:14:28 PM UTC 2026: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   39 |     list->size = 0;
      |         ^~
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
b2c8933
Thu Mar 26 07:15:01 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   39 |     list->size = 0;
      |         ^~
3d5ccae
